--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           </a>
         </article>
         <article role="region" aria-labelledby="card-title-currency" class="bg-white dark:bg-gray-800 rounded-2xl shadow-md transition-transform transition-shadow hover:-translate-y-1 hover:shadow-xl">
-          <a href="valutakurser.html" class="block p-6">
+          <a href="Valutakurser.html" class="block p-6">
             <h3 id="card-title-currency" class="text-xl font-semibold text-[#7C3AED]">Valutakurser kurver</h3>
             <p class="mt-2 text-gray-700 dark:text-gray-300">Lav kurver til valutakurser</p>
           </a>
