--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           </a>
         </article>
         <article role="region" aria-labelledby="card-title-currency" class="bg-white dark:bg-gray-800 rounded-2xl shadow-md transition-transform transition-shadow hover:-translate-y-1 hover:shadow-xl">
-          <a href="Valutakurser.html" class="block p-6">
+          <a href="valutakurser.html" class="block p-6">
             <h3 id="card-title-currency" class="text-xl font-semibold text-[#7C3AED]">Valutakurser kurver</h3>
             <p class="mt-2 text-gray-700 dark:text-gray-300">Lav kurver til valutakurser</p>
           </a>
@@ -56,6 +56,13 @@
           <a href="simple-ue-kurver.html" class="block p-6">
             <h3 id="card-title-simple" class="text-xl font-semibold text-[#7C3AED]">Simple U/E kurver</h3>
             <p class="mt-2 text-gray-700 dark:text-gray-300">Lav simple kurver</p>
+          </a>
+        </article>
+        <!-- Ny knap til World Bank data -->
+        <article role="region" aria-labelledby="card-title-worldbank" class="bg-white dark:bg-gray-800 rounded-2xl shadow-md transition-transform transition-shadow hover:-translate-y-1 hover:shadow-xl">
+          <a href="worldbank.html" class="block p-6">
+            <h3 id="card-title-worldbank" class="text-xl font-semibold text-[#7C3AED]">Hent data fra World Bank</h3>
+            <p class="mt-2 text-gray-700 dark:text-gray-300">Indsamling af World Bank-data ved et klik</p>
           </a>
         </article>
       </div>
