--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     Besøg: <span id="counter">…</span>
   </div>
   <script>
-    // CountAPI besøgstæller
+    // CountAPI besøgstæller (HUSK https://)
     fetch('https://api.countapi.xyz/hit/allanbaisgaard-landing/visits')
       .then(res => res.json())
       .then(data => {
